RESOLVED FIXED161551
[Mac] RetainPtr misuse, DDActionContext leaks
https://bugs.webkit.org/show_bug.cgi?id=161551
Summary [Mac] RetainPtr misuse, DDActionContext leaks
Joseph Pecoraro
Reported 2016-09-02 15:04:38 PDT
RetainPtr misuse, DDActionContext leaks $ ack 'RetainPtr.*?alloc' | grep -v adopt WebKit2/Platform/mac/MenuUtilities.mm:56: RetainPtr<DDActionContext> actionContext = [[getDDActionContextClass() alloc] init]; WebKit2/Platform/mac/MenuUtilities.mm:87: RetainPtr<DDActionContext> actionContext = [[getDDActionContextClass() alloc] init]; These should be adopted.
Attachments
[PATCH] Proposed Fix (2.16 KB, patch)
2016-09-02 15:05 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-09-02 15:05:12 PDT
Created attachment 287821 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2016-09-02 15:44:26 PDT
Comment on attachment 287821 [details] [PATCH] Proposed Fix Clearing flags on attachment: 287821 Committed r205377: <http://trac.webkit.org/changeset/205377>
WebKit Commit Bot
Comment 3 2016-09-02 15:44:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.