[Mac] RetainPtr misuse, DDActionContext leaks https://bugs.webkit.org/show_bug.cgi?id=161551

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-02
Reviewed by Tim Horton.

* Platform/mac/MenuUtilities.mm:
(WebKit::menuItemForTelephoneNumber):
(WebKit::menuForTelephoneNumber):

Canonical link: https://commits.webkit.org/179709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205377 268f45cc-cd09-0410-ab3c-d52691b4dbfc